--- a/Matschie_Salesforce/src/test/resources/config.properties
+++ b/Matschie_Salesforce/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 server=sample-9d-dev-ed.my.salesforce.com
-resources=services/data/v20.0/sobjects/Contact
+resources=services/data/v20.0/sobjects
 #username=hari.radhakrishnan@testleaf.com
 #password=QjKlprrA12rBgyA8bsnrDEF1
 oAuth2=00D5j000004mDIU!ARoAQL.kTMsTQ5aug7QwvVJP__hwWGHvqec8xRCnFEx116x78Ztc_XJ34pHAW0p1sSSDNkh1Ve_z8Gxwx9T_y_cGCsAgX6Wr00D5j000004mDIU!ARoAQL.kTMsTQ5aug7QwvVJP__hwWGHvqec8xRCnFEx116x78Ztc_XJ34pHAW0p1sSSDNkh1Ve_z8Gxwx9T_y_cGCsAgX6Wr
